SEO and No Github

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Tuazon Portfolio</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta content="" name="Fritz Tuazon Online portfolio about educational background, interestsm projects, ceertificates, competitions, recognitions and his contacts">
+  <meta content="" name="Fritz L. Tuazon, CV, Recognitions, Certficates, NDMU, Notre DAme of Marbel University, KNCHS, Koronadal National Comprehensive High School, KCES 2, Automnated Faucet, ECCP, Research, SMART">
+
+  <link rel="canonical" href="https://tuazon-portfolio.vercel.app/">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
