Certificates and Positioning

--- a/index.html
+++ b/index.html
@@ -316,8 +316,6 @@
 
   </section>
 
-  
-
   <!-- End Education Section -->
 
 
@@ -327,22 +325,12 @@
   <section id="certificate" class="services">
     <div class="container">
       <div class="section-title">
-        <h2>Competition Videos and Certificates</h2>
+        <h2>Certificates</h2>
       </div>
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="row">
-              <div class="col-md-4">
-                <iframe width="100%" height="180" src="https://www.youtube.com/embed/s__NyzNqF9c" title="Nexus video Pitch PSC7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-4">
-                <iframe width="100%" height="180" src="https://www.youtube.com/embed/5K0hoY0hqXs" title="TUAZON Seeds for the Future 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-4">
-                <iframe width="100%" height="180" src="https://www.youtube.com/embed/67soy5i8dh4" title="NDMU | Team Nexus | AppLerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-
               <div class="col-lg-4 col-md-6" data-aos="fade-up">
                 <div class="icon-box mt-4" data-aos="fade-up" data-aos-delay="100" style="padding: 0px 0px; padding-bottom: 5px;">
                   <img src="assets/img/Competitions/academic.png" class="img-fluid" alt="">
@@ -368,6 +356,20 @@
               </div>
               <div class="col-lg-4 col-md-6" data-aos="fade-up">
                 <div class="icon-box mt-4" data-aos="fade-up" data-aos-delay="100" style="padding: 0px 0px; padding-bottom: 5px;">
+                  <img src="assets/img/Competitions/ITE.png" class="img-fluid" alt="">
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Merit and Recognition Award (Outstanding ITE Graduate)</em></p>
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>PSITE Region XII</em></p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                <div class="icon-box mt-4" data-aos="fade-up" data-aos-delay="100" style="padding: 0px 0px; padding-bottom: 5px;">
+                  <img src="assets/img/Competitions/ojt.png" class="img-fluid" alt="">
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Ideahub It Solutions Provider Inc. Davao City</em></p>
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Internship Completion Certificate</em></p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                <div class="icon-box mt-4" data-aos="fade-up" data-aos-delay="100" style="padding: 0px 0px; padding-bottom: 5px;">
                   <img src="assets/img/Competitions/aairc.jpg" class="img-fluid" alt="">
                   <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Ascendens Asia International Researchers Club (AAIRC)</em></p>
                   <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Researcher | Member</em></p>
@@ -378,6 +380,13 @@
                   <img src="assets/img/Competitions/psc.png" class="img-fluid" alt="">
                   <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Department of Information and Communication Technology (DICT)</em></p>
                   <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>1st Place Regional Pitching Competition </em></p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6" data-aos="fade-up">
+                <div class="icon-box mt-4" data-aos="fade-up" data-aos-delay="100" style="padding: 0px 0px; padding-bottom: 5px;">
+                  <img src="assets/img/Competitions/dl.png" class="img-fluid" alt="">
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>Certificate of Recognition (Notre Dame of Marbel University)</em></p>
+                  <p style="text-align: left; color: #fff; padding: 5px 10px;"><em>School year 2020 - 2021</em></p>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6" data-aos="fade-up">
@@ -444,9 +453,15 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Ideahub It solutions Provider Inc.</a><br> </h4>
+            <h4 style="text-align:left; color:#12d640 "> Ideahub It solutions Provider Inc. <br> </h4>
             <h5 style="text-align:left;">January 25, 2023 - May 12, 2023</h5>
             <p style="text-align:left;color:#fff"><em>Quality Assurance | Project Manager </em></p>
+            <div style="text-align: left;">
+              <a href="assets/img/Competitions/ojt.png" target="_blank">
+                <img src="assets/img/Competitions/ojt.png" width="200" height="auto">
+                <p style="font-style: italic;">Click to See Image</p>
+              </a>
+            </div>
             <br>
             <p style="text-align: justify;">
                   Within the company, I hold a dual role as a Quality Assurance (QA) Checker and a Junior Project Manager. 
@@ -789,6 +804,30 @@
         </div>
       </div>
     </div>
+
+      <div class="container">
+        <div class="section-title">
+          <h2>Competition Videos</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-12" data-aos="fade-up">
+            <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-md-4">
+                  <iframe width="100%" height="180" src="https://www.youtube.com/embed/s__NyzNqF9c" title="Nexus video Pitch PSC7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="col-md-4">
+                  <iframe width="100%" height="180" src="https://www.youtube.com/embed/5K0hoY0hqXs" title="TUAZON Seeds for the Future 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="col-md-4">
+                  <iframe width="100%" height="180" src="https://www.youtube.com/embed/67soy5i8dh4" title="NDMU | Team Nexus | AppLerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div>
+                </div>
+            </div>
+          </div>
+      </div>
+
   </section>
 
   <!-- End Contact Section -->
