--- a/projects/vdg.html
+++ b/projects/vdg.html
@@ -43,7 +43,7 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Anti Thief alarm System, Improvisation and Manipulation of Arduino to Develop a Security Device using Hnuman Body Sensor</h2>
+            <h2 style="color:#12d640">Anti Thief alarm System, Improvisation and Manipulation of Arduino to Develop a Security Device using Human Body Sensor</h2>
 
             <!--<div class="embed-responsive embed-responsive-16by9">
                Youtube Link goes here
