Added Certification and Skills

--- a/projects/ai.html
+++ b/projects/ai.html
@@ -46,6 +46,7 @@
               <h2 style="color:#12d640">Development and Validation of Artificial Intelligence-Assisted Cholangioscopy Model for Automatic Detection of Malignant Biliary Strictures: An Initial Experience</h2>
               <br>
               <h3 style="text-decoration: underline;">Developer and Code Author: Fritz Tuazon</h3>
+              <p>Digital Image Classification on Cholangioscopy and Analysis Module (DICCA Module)</p>
               <br>
               <p>
                   In the realm of modern technology, computers have revolutionized the way we perceive and analyze images. Through the lens of computer vision, these intricate digital systems decipher visual data by interpreting images as matrices of pixels. This transformative capability has paved the way for remarkable advancements in artificial intelligence, particularly within the realm of healthcare.
