--- a/projects/hummingbird.html
+++ b/projects/hummingbird.html
@@ -43,7 +43,7 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Hummingbird Coffee Shop Inventory and POS System </h2>
+              <h2 style="color:#12d640">Hummingbird Ordering and Inventory System</h2>
               <!-- <div class="col-md-4">
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe width="586" height="302" src="https://www.youtube.com/embed/yVfQNptCr-E" title="AUTO ATT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
