remove title on about

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
         <div class="col-lg-4" data-aos="fade-right">
           <img src="assets/img/profile.png" class="img-fluid" alt="">
           <h3 style="text-decoration: underline; text-align: center;">FRITZ L. TUAZON</h3>
-          <p style="text-align: center; margin-bottom: 5px; font-weight: bold;">Chief Operating Officer</p>
+          <!-- <p style="text-align: center; margin-bottom: 5px; font-weight: bold;">Chief Operating Officer</p>
           <div style="text-align: center; margin-top: 5px;">
               <a href="https://tuklasph.com" target="_blank">Tuklas IT Creatives and Solution</a>
-          </div>
+          </div> -->
       </div>
       
               
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" style="padding-top: 20px;">
-          <p style="text-align: justify;">A Graduate of Bachelor of Science in information Technology, Awardee of Outstanding ITE Graduate 
+          <p style="text-align: justify;">A Graduate of Bachelor of Science in Information Technology, Awardee of Outstanding ITE Graduate 
             of NDMU awarderd by PSITS region XII Award for Merits and Recognition, team Leader of NEXUS, 
             a Start-up team that joins the 2022 SMART Prepaid Innovation Generation Season 2 and 3, and
             DICT national and regional pitching competition. Received award during the 
