--- a/index.html
+++ b/index.html
@@ -984,6 +984,9 @@
                 <div class="col-md-4">
                   <iframe width="100%" height="180" src="https://www.youtube.com/embed/67soy5i8dh4" title="NDMU | Team Nexus | AppLerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
+                <div class="col-md-4">
+                  <iframe width="100%" height="180" src="https://youtu.be/Y3hDhNlIBQE" title="NDMU | Team Nexus | AppLerto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
               </div>
                 </div>
             </div>
